--- a/beauty-finder/package.json
+++ b/beauty-finder/package.json
@@ -1,7 +1,7 @@
 {
   "name": "beauty-finder",
-  "version": "0.1.0",
   "homepage": "/home",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -12,7 +12,7 @@
     "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
-    "react-router-dom": "^6.21.2",
+    "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.5",
@@ -41,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
