--- a/beauty-finder/package.json
+++ b/beauty-finder/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material/switch": "^14.0.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,8 +13,12 @@
     "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
+    "react-phone-number-input": "^3.3.9",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
+    "react-switch": "^7.0.0",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.5",
     "web-vitals": "^2.1.4"
